--- a/src/pages/grid/grid.html
+++ b/src/pages/grid/grid.html
@@ -44,11 +44,10 @@
 
   <spell-icons></spell-icons>
 
+  {{_getGameStatus()}}
+
   <button (click)="_startGame()">Start</button>   
   <button (click)="_stopGame()">Stop</button>
   <button (click)="_resumeGame()">Resume</button>
-
-
-  {{_getGame() | json}}
 
 </ion-content>
