--- a/src/pages/grid/grid.html
+++ b/src/pages/grid/grid.html
@@ -44,7 +44,7 @@
 
   <spell-icons></spell-icons>
 
-  {{_getGameStatus()}}
+  <!--{{_getGameStatus()}}-->
 
   <button (click)="_startGame()">Start</button>   
   <button (click)="_stopGame()">Stop</button>
