--- a/src/pages/grid/grid.html
+++ b/src/pages/grid/grid.html
@@ -44,6 +44,8 @@
 
   <spell-icons></spell-icons>
 
+  <button ion-button block (click)="openModal()">Open Modal</button>
+
   <!--{{_getGameStatus()}}-->
 
   <button (click)="_startGame()">Start</button>   
