Add modal output with resume or restart game

--- a/src/pages/resumegame/resumegame.html
+++ b/src/pages/resumegame/resumegame.html
@@ -9,8 +9,8 @@
     ASTUCE : Faites très attention au <a>Séisme</a> de Machin. En cas de coup dur utilisez <a>Tranquilité.</a>
   </p>
 
-  <button ion-button block (click)="closeModal()">Resume</button>
-  <button ion-button block (click)="_startGame()">Restart</button>
-  <button ion-button block (click)="_stopGame()">Quit</button>
+  <button ion-button block (click)="closeModalAndResume()">Resume</button>
+  <button ion-button block (click)="closeModalAndRestart()">Restart</button>
+  <button ion-button block >Quit</button>
 
 </ion-content>
