update modal resume : add quit

--- a/src/pages/resumegame/resumegame.html
+++ b/src/pages/resumegame/resumegame.html
@@ -11,6 +11,6 @@
 
   <button ion-button block (click)="closeModalAndResume()">Resume</button>
   <button ion-button block (click)="closeModalAndRestart()">Restart</button>
-  <button ion-button block >Quit</button>
+  <button ion-button block (click)="closeModalAndQuit()">Quit</button>
 
 </ion-content>
