--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,9 +10,7 @@
 <ion-content padding>
   <h3>Ionic Menu Starter</h3>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <button ion-button block (click)="goGridPage()">Start game</button>
+  <button ion-button block>Option</button>
+  <button ion-button block (click)="exitApp()">Quit</button>
 </ion-content>
