--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,11 @@
 <ion-header>
   <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Home</ion-title>
+    <ion-title>DruidHill</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <h3>Menu</h3>
 
   <button ion-button block (click)="goGridPage()">Start game</button>
   <button ion-button block>Option</button>
