--- a/src/pages/resumegame/resumegame.html
+++ b/src/pages/resumegame/resumegame.html
@@ -11,6 +11,7 @@
 
   <button ion-button block (click)="closeModalAndResume()">Resume</button>
   <button ion-button block (click)="closeModalAndRestart()">Restart</button>
+  <button ion-button block>Tutorial</button>
   <button ion-button block (click)="closeModalAndQuit()">Quit</button>
 
 </ion-content>
