--- a/src/pages/tutorial/tutorial.html
+++ b/src/pages/tutorial/tutorial.html
@@ -27,7 +27,7 @@
     <ion-slide *ngFor="let slide of slides">
       <ion-toolbar>
         <ion-buttons end>
-          <button ion-button color="primary" (click)="closeModal()">Passer et jouer</button>
+          <button ion-button color="primary" (click)="closeModal()">Passer</button>
         </ion-buttons>
       </ion-toolbar>
       <img [src]="slide.image" class="slide-image" />
