--- a/src/pages/resumegame/resumegame.html
+++ b/src/pages/resumegame/resumegame.html
@@ -3,7 +3,7 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Win/Loose</h3>
+  <h3>Pause</h3>
 
   <p>
     ASTUCE : Faites très attention au <a>Séisme</a> de Machin. En cas de coup dur utilisez <a>Tranquilité.</a>
