update resume boss description

--- a/src/pages/resumegame/resumegame.html
+++ b/src/pages/resumegame/resumegame.html
@@ -26,33 +26,32 @@
     <ion-item>
       <ion-icon name='flask' item-start></ion-icon>
       <ion-note  class="resumeattackinfo">
-        dmg:0.5k / target:tank / cd:0.5s
+       0.5k dmg / 0.5s - Target : tank
       </ion-note>
     </ion-item>
 
     <ion-item>
       <ion-icon name='body' item-start></ion-icon>
       <ion-note  class="resumeattackinfo">
-        dmg:1k / target:random / cd:1s
+        1k dmg / 1s - Target : random
       </ion-note>
     </ion-item>
 
     <ion-item>
       <ion-icon name='leaf' item-start></ion-icon>
       <ion-note  class="resumeattackinfo">
-        dmg:10k / target:random / cd:5s
+        10k dmg / 5s - Target : random
       </ion-note>
     </ion-item>
 
     <ion-item>
       <ion-icon name='flask' item-start></ion-icon>
       <ion-note  class="resumeattackinfo">
-        dmg:0.3k / target:random / cd:0.3s
+        0.3k dmg / 0.3s - Target : random
       </ion-note>
     </ion-item>
 
-    <h4>Astuce :</h4>
-    <p>Faites très attention à l'attaque <a>slash</a> de Graâl. En cas de coup dur utilisez <a>Tranquilité.</a></p>
+    <p><strong>Astuce :</strong> Faites très attention à l'attaque <a>slash</a> de Graâl. En cas de coup dur utilisez <a>Tranquilité.</a></p>
   </ion-list>
 
   <button ion-button block (click)="closeModalAndResume()">Resume</button>
