generate and move boss information into new page

--- a/src/pages/grid/grid.html
+++ b/src/pages/grid/grid.html
@@ -7,7 +7,7 @@
     </ion-buttons>
 
     <ion-buttons end>
-      <button ion-button icon-only>
+      <button ion-button icon-only (click)="openBossInformationModal()">
         <ion-icon name="book"></ion-icon>
       </button>
     </ion-buttons>
