--- a/src/pages/resumegame/resumegame.html
+++ b/src/pages/resumegame/resumegame.html
@@ -1,7 +1,29 @@
-<ion-content padding>
-  <h3>Pause</h3>
-  
+<ion-header>
+  <ion-navbar hideBackButton="true">
+    <ion-buttons start>
+      <button ion-button icon-only (click)="openResumeGameModal()">
+        <ion-icon name="pause"></ion-icon>
+      </button>
+    </ion-buttons>
 
+    <ion-buttons end>
+      <button ion-button icon-only (click)="openBossInformationModal()">
+        <ion-icon name="book"></ion-icon>
+      </button>
+    </ion-buttons>
+
+    <ion-buttons end>
+      <button ion-button icon-only>
+        <ion-icon name="settings"></ion-icon> <!-- help-circle construct menu pause stats refresh -->
+      </button>
+    </ion-buttons>
+
+    <ion-title>DruidHill</ion-title>
+  </ion-navbar>
+</ion-header>
+
+<ion-content padding>
+  
     <ion-list-header>
     <ion-item>
       <ion-note item-start><img src="assets/images/boss10.svg" height="25px"/></ion-note >
@@ -13,46 +35,6 @@
       </ion-note>
     </ion-item>
     </ion-list-header>
-
-  <button ion-button block (click)="toggleDisplayInfos()">Informations</button>
-
-  <ion-list no-border *ngIf="getDisplayInfos()">
-<!-- 
-      <div class="item row" style="text-align:left">
-        <span class="col"><img src="assets/images/boss10.svg" /></span>
-        <span class="col">Graâl - Dieu des tourments</span>
-      </div>
-  -->
-    <ion-item>
-      <ion-icon name='flask' item-start></ion-icon>
-      <ion-note  class="resumeattackinfo">
-       0.5k dmg / 0.5s - Target : tank
-      </ion-note>
-    </ion-item>
-
-    <ion-item>
-      <ion-icon name='body' item-start></ion-icon>
-      <ion-note  class="resumeattackinfo">
-        1k dmg / 1s - Target : random
-      </ion-note>
-    </ion-item>
-
-    <ion-item>
-      <ion-icon name='leaf' item-start></ion-icon>
-      <ion-note  class="resumeattackinfo">
-        10k dmg / 5s - Target : random
-      </ion-note>
-    </ion-item>
-
-    <ion-item>
-      <ion-icon name='flask' item-start></ion-icon>
-      <ion-note  class="resumeattackinfo">
-        0.3k dmg / 0.3s - Target : random
-      </ion-note>
-    </ion-item>
-
-    <p><strong>Astuce :</strong> Faites très attention à l'attaque <a>slash</a> de Graâl. En cas de coup dur utilisez <a>Tranquilité.</a></p>
-  </ion-list>
 
   <button ion-button block (click)="closeModalAndResume()">Resume</button>
   <button ion-button block (click)="closeModalAndRestart()">Restart</button>
