add spell-icon count

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,7 @@
 <ion-content padding>
   <h3>Menu</h3>
 
-  <button ion-button block (click)="goGridPage()">Start game</button>
+  <button ion-button block (click)="goGridPage()">Partie rapide</button>
   <button ion-button block>Option</button>
-  <button ion-button block (click)="exitApp()">Quit</button>
+  <button ion-button block (click)="exitApp()">Quitter</button>
 </ion-content>
