update game result modal with score

--- a/src/pages/resumegame/resumegame.html
+++ b/src/pages/resumegame/resumegame.html
@@ -1,3 +1,4 @@
+<div class="modal-wrapper-alertlike">
 <ion-header>
   <ion-navbar hideBackButton="true">
     <ion-buttons start>
@@ -42,3 +43,4 @@
   <button ion-button block (click)="closeModalAndQuit()">Quit</button>
 
 </ion-content>
+</div>
