--- a/src/pages/endgame/endgame.html
+++ b/src/pages/endgame/endgame.html
@@ -34,6 +34,10 @@
         Heal total :
         <ion-badge item-end>{{gameRegister.healDone/1000}} k</ion-badge>
       </ion-item-divider>
+      <ion-item-divider>
+        Heal/seconde :
+        <ion-badge item-end>{{gameRegister.healDone/(gameRegister.duration/1000) | number : '1.0-0'}} hps</ion-badge>
+      </ion-item-divider>
     </ion-content>
 
     <button ion-button block (click)="closeModalAndRestart()">Recommencer</button>
